...
  if (spotifyApiViewModel.playbackActive) {
    Row(
        modifier =
            Modifier.fillMaxWidth()
                .height(76.dp)
                .background(color = MaterialTheme.colorScheme.tertiary)
                .testTag("playerContainer")
                .clickable(onClick = { navigationActions.navigateTo(Screen.PLAY_SCREEN) }),
        verticalAlignment = Alignment.CenterVertically,
    ) {
      // Cover image
      Card(
          modifier =
...
            if (spotifyApiViewModel.isPlaying) {
              spotifyApiViewModel.pausePlayback()
            } else {
              spotifyApiViewModel.playPlayback()
            }
          },
          modifier = Modifier.testTag("playPauseButton")) {
            if (spotifyApiViewModel.isPlaying) {
              Icon(
                  painter = painterResource(R.drawable.pause),
                  contentDescription = "Pause",
                  tint = Color.Unspecified,
                  modifier = Modifier.size(35.dp))
...
      // Skip button
      IconButton(
          onClick = {
            spotifyApiViewModel.skipSong()
            spotifyApiViewModel.updatePlayer()
          },
          modifier = Modifier.padding(end = 8.dp).testTag("skipButton")) {
            Icon(
                painter = painterResource(R.drawable.skip_forward),
                contentDescription = "Skip",
                tint = Color.Unspecified,
                modifier = Modifier.size(35.dp).testTag("skipButton"))
          }
...
