...
fun BottomNavigationMenu(
    onTabSelect: (TopLevelDestination) -> Unit,
    tabList: List<TopLevelDestination>,
    selectedItem: String
) {
  NavigationBar(
      modifier = Modifier.fillMaxWidth().height(56.dp).testTag("bottomNavigationMenu"),
      containerColor = MaterialTheme.colorScheme.background,
      tonalElevation = 0.dp,
      content = {
        tabList.forEach { tab ->
          val selected = tab.screen == selectedItem
          NavigationBarItem(
...
