...
              // Placeholder to add a playlist cover
              Text(
                  text = "Add \n Playlist Cover",
                  style = MaterialTheme.typography.bodyLarge,
                  color = PrimaryGray,
                  textAlign = TextAlign.Center,
                  modifier = Modifier.testTag("emptyCoverText"))
            }
      }
}

/** Composable that is displayed when a playlist does not have a cover */
@Composable
...
